feat: Ajustando para evitar N + 1 e retorno null